Adding console tuning for readablity
Added a set of checkboxes to filter the contents of the console display.

--- a/static/index.html
+++ b/static/index.html
@@ -187,6 +187,13 @@
       Updater Console &nbsp;
       <!--<i id="btn-console-copy" class="fa fa-clipboard fa-md"></i>
       &nbsp; -->
+      <!--Set of Checkboxes for selecting what elements are displayed in the console-->
+      <div class="checkbox-group">
+        <label><input type="checkbox" name="Info"> Info </label>
+        <label><input type="checkbox" name="Warn"> Warn </label>
+        <label><input type="checkbox" name="Shell"> Shell </label>
+        <label><input type="checkbox" name="Debug"> Debug </label>
+    </div>
       <i id="btn-console-clear" class="fa fa-md fa-remove"></i>
       &nbsp;
       <span id="message-console"></span>
