Added JS to store checkbox data in the browser cache
Added js to store the save the checkbox states across multiple sessions

--- a/static/index.html
+++ b/static/index.html
@@ -184,6 +184,7 @@
 
     <!-- Console (Always Visible) -->
     <div id="console-header">
+      
       <div class="checkbox-group">
         <label><input type="checkbox" class="log-filter" value="info:" checked> Info</label>
         <label><input type="checkbox" class="log-filter" value="debug:" checked > Debug</label>
@@ -219,7 +220,7 @@
     </div>
   </div>
 </div>
-
+<script src="js/persistance.js"></script> // for persistance of checkboxes across mutliple states of the code
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/libs/jquery.min.js"></script>
 <script src="js/libs/updaterapi.js"></script>
