Finally fixed the issue
persistant filters for what gets displayed to the updater console

--- a/static/index.html
+++ b/static/index.html
@@ -182,7 +182,7 @@
     </div>
   </div>
 </div>
-<script src="js/persistance.js"></script> <!--for persistance of checkboxes across mutliple states of the code --> 
+<!-- <script src="js/persistance.js"></script> for persistance of checkboxes across mutliple states of the code --> 
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/libs/jquery.min.js"></script>
 <script src="js/libs/updaterapi.js"></script>
