--- a/static/index.html
+++ b/static/index.html
@@ -182,6 +182,14 @@
     </div>
   </div>
 </div>
+<style>
+  .loglevel-info { color: #4CAF50; }  /* Green */
+  .loglevel-debug { color: #2196F3; } /* Blue */
+  .loglevel-warn { color: #FFC107; }  /* Yellow */
+  .loglevel-error { color: #F44336; } /* Red */
+  .loglevel-g2 { color: #9C27B0; }    /* Purple */
+  .loglevel-shell { color: #FF5722; } /* Orange */
+  </style>
 <!-- <script src="js/persistance.js"></script> for persistance of checkboxes across mutliple states of the code --> 
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/libs/jquery.min.js"></script>
