--- a/static/index.html
+++ b/static/index.html
@@ -147,8 +147,9 @@
     </div>
 
     <!-- Console (Always Visible) -->
-    <div id="console-header">
+<div id="console-header">
             <!--Set of Checkboxes for selecting what elements are displayed in the console-->
+    <div style="overflow: auto; width: 30%; border: 1px solid #ccc; padding: 10px;">
       <div class="checkbox-group">
         <label><input type="checkbox" class="log-filter" value="info:" checked> Info</label>
         <label><input type="checkbox" class="log-filter" value="debug:" checked > Debug</label>
@@ -157,17 +158,144 @@
         <label><input type="checkbox" class="log-filter" value="g2:" checked> G2</label>
         <label><input type="checkbox" class="log-filter" value="shell:"checked> Shell</label>        
       </div>
-
-      Updater Console &nbsp;<!--What is this?-->
-
-      <i id="btn-console-clear" class="fa fa-md fa-remove"></i>
-      &nbsp;
-      <span id="message-console"></span>
+      <hr>
+      <!-- Checkboxes to toggle visibility -->
+      <div style="margin-bottom: 10px;">
+        <label><input type="checkbox" id="toggle-updater" checked> Show Updater Console</label>
+        <label><input type="checkbox" id="toggle-fabmo" checked> Show FabMo Console</label>
+        <label><input type="checkbox" id="toggle-status" checked> Show Status</label>
+      </div>
     </div>
-    <div id="console">
-      <div class="content"></div>
+
+<hr>
+<!-- Wrapper for all consoles -->
+<div style="display: flex; justify-content: space-evenly; align-items: flex-start; gap: 20px;">
+
+  <div id="updater-wrapper">
+    <h3>Updater Console:</h3>
+    <div class="updater console-container">
+      <div id="console" class="console-content">
+        <div class="content">Updater log content...</div>
+      </div>
     </div>
   </div>
+
+  <div id="fabmo-wrapper">
+    <h3>FabMo Console:</h3>
+    <div id="fabmo-console" class="console-container">
+      <div id="console" class="console-content">
+        <div id="external-log" class="external-log-content">FabMo log content...</div>
+      </div>
+    </div>
+  </div>
+
+  <div id="status-wrapper">
+    <h3>Status:</h3>
+    <div id="status-console" class="console-container">
+      <div id="status-content" class="console-content">
+        Status updates will be displayed here...
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<style>
+  .console-container {
+    height: 47vh; /* Fixed height to prevent page overflow */
+    width: 100%; /* Ensures it takes the available space */
+    /*border: 1px solid #ccc;*/
+    padding: 10px;
+   
+    display: flex;
+    flex-direction: column;
+  }
+
+  .console-content {
+    flex-grow: 1;
+    overflow-y: auto; /* Enables scrolling */
+    max-height: 100%; /* Ensures it doesn't exceed the parent */
+    padding: 5px;
+  
+    /*border: 1px solid #ddd;*/
+  }
+
+  /* Ensuring flex sizing is respected */
+  #updater-wrapper, #fabmo-wrapper, #status-wrapper {
+    flex: 1; /* Ensures all sections are evenly spaced */
+    min-width: 30%; /* Prevents sections from collapsing */
+  }
+</style>
+<script>
+  function toggleVisibility(id, wrapperId) {
+    document.getElementById(id).addEventListener("change", function() {
+      const section = document.getElementById(wrapperId);
+      section.style.display = this.checked ? "block" : "none";
+    });
+  }
+
+  toggleVisibility("toggle-updater", "updater-wrapper");
+  toggleVisibility("toggle-fabmo", "fabmo-wrapper");
+  toggleVisibility("toggle-status", "status-wrapper");
+</script>
+<script>
+  // Get server IP dynamically from current window location
+  var serverIP = window.location.hostname;
+
+  // Function to fetch and update status data
+  async function fetchStatusData() {
+      try {
+          let response = await fetch(`http://${serverIP}:80/status`);
+
+          if (!response.ok) {
+              throw new Error(`HTTP error! Status: ${response.status}`);
+          }
+
+          let data = await response.json(); // Expecting JSON response
+          updateStatusConsole(data);
+      } catch (error) {
+          console.error("Failed to fetch status data:", error);
+      }
+  }
+
+  // Fetch status every 500ms
+  setInterval(fetchStatusData, 500);
+
+  function updateStatusConsole(statusData) {
+      var statusContainer = document.getElementById('status-content');
+
+      if (!statusContainer) {
+          console.error("Error: Status container not found!");
+          return;
+      }
+
+      // Clear previous content to avoid duplication
+      statusContainer.innerHTML = "";
+
+      // Process JSON data and format it for display
+      Object.entries(statusData).forEach(([key, value]) => {
+          let statusEntry = document.createElement('div');
+          statusEntry.style.whiteSpace = "pre-wrap"; // Ensure proper word wrapping
+          statusEntry.style.margin = "2px 0"; // Adds spacing for readability
+          statusEntry.innerHTML = `<strong>${key}:</strong> ${prettifyStatus(value)}`; // Prettify JSON output
+
+          statusContainer.appendChild(statusEntry);
+      });
+
+      statusContainer.scrollTop = statusContainer.scrollHeight; // Auto-scroll if needed
+  }
+
+  function prettifyStatus(value) {
+      if (typeof value === "object") {
+          return JSON.stringify(value, null, 2); // Pretty-print objects
+      }
+      return value;
+  }
+</script>
+  <hr>
+  <i id="btn-console-clear" class="fa fa-md fa-remove"></i>&nbsp;
+</div>
+
 </div>
 
 <div id="modal">
