--- a/static/index.html
+++ b/static/index.html
@@ -166,10 +166,10 @@
         <label><input type="checkbox" id="toggle-status" checked> Show Status</label>
       </div>
     </div>
-
+    <i id="btn-console-clear" class="fa fa-md fa-remove">Clear Console</i>&nbsp;
 <hr>
 <!-- Wrapper for all consoles -->
-<div style="display: flex; justify-content: space-evenly; align-items: flex-start; gap: 20px;">
+<div style="display: flex; justify-content: space-evenly; align-items: flex-start; gap: 10px;">
 
   <div id="updater-wrapper">
     <h3>Updater Console:</h3>
@@ -205,8 +205,7 @@
     height: 47vh; /* Fixed height to prevent page overflow */
     width: 100%; /* Ensures it takes the available space */
     /*border: 1px solid #ccc;*/
-    padding: 10px;
-   
+    padding: 1px;
     display: flex;
     flex-direction: column;
   }
@@ -215,7 +214,7 @@
     flex-grow: 1;
     overflow-y: auto; /* Enables scrolling */
     max-height: 100%; /* Ensures it doesn't exceed the parent */
-    padding: 5px;
+    padding: 1px;
   
     /*border: 1px solid #ddd;*/
   }
@@ -293,7 +292,7 @@
   }
 </script>
   <hr>
-  <i id="btn-console-clear" class="fa fa-md fa-remove"></i>&nbsp;
+
 </div>
 
 </div>
