--- a/static/index.html
+++ b/static/index.html
@@ -171,7 +171,7 @@
 <!-- Wrapper for all consoles -->
 <div style="display: flex; justify-content: space-evenly; align-items: flex-start; gap: 10px;">
 
-  <div id="updater-wrapper">
+  <div id="updater-wrapper"style="max-width: 200px;">
     <h3>Updater Console:</h3>
     <div class="updater console-container">
       <div id="console" class="console-content">
@@ -180,7 +180,7 @@
     </div>
   </div>
 
-  <div id="fabmo-wrapper">
+  <div id="fabmo-wrapper" style="max-width: 200px;">
     <h3>FabMo Console:</h3>
     <div id="fabmo-console" class="console-container">
       <div id="console" class="console-content">
@@ -189,7 +189,7 @@
     </div>
   </div>
 
-  <div id="status-wrapper">
+  <div id="status-wrapper" style="max-width: 200px;">
     <h3>Status:</h3>
     <div id="status-console" class="console-container">
       <div id="status-content" class="console-content">
